prevent hover on mobile

--- a/public/css/quizStyle.css
+++ b/public/css/quizStyle.css
@@ -237,4 +237,8 @@ special styling for small (mobile) screens
         margin-left: auto;
         margin-right: auto;
     }
+
+    .option:hover {
+        background-color: #f7f7f7;
+    }
 }
